--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,113 @@
+.background-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.backGround {
+  background-color: #fff;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-block: 25px;
+}
+
 .btn {
-  transition: all 1s ease-in-out;
+  transition: all 0.5s ease-in-out;
   color: white;
   background-color: black;
   font-size: 1rem;
   font-weight: 400;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding-inline: 50px;
-  padding-block: 20px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
-.backGround-main {
-  margin: 0;
-  padding: 0;
-  background-color: #111;
-  height: 100vh;
-  width: 100%;
+.submit {
+  width: 25%;
+  padding-block: 3%;
+  border: 2px solid #fff;
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.submit:hover {
+  background-color: #999;
+  border: 2px solid #000;
+  color: #000;
+}
+
+.todos-container {
+  border-radius: 10px;
+  width: 35%;
+  height: 100%;
+  padding: 2%;
+  background-color: #999;
+}
+
+.main-title {
+  color: #fff;
+}
+
+.add-todo-form {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  padding-block: 3%;
+}
+
+.new-todo-input {
+  color: #999;
+  background-color: #222;
+  width: 100%;
+  height: 100%;
+  padding-block: 10px;
+  padding-inline: 10px;
+  margin-left: 10px;
+  margin-top: 5px;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: sans-serif;
+  border: none;
+  border-radius: 5px;
+}
+
+.new-todo-input::placeholder {
+  transition: all 0.5s ease-in-out;
+  color: #ddd;
+  transform: translateX(-300px);
+}
+
+.new-todo-input:hover::placeholder {
+  transform: translateY(0px);
+}
+
+.label {
+  color: white;
+  font-weight: 500;
+  font-size: 1.4rem;
+}
+
+.todo-container {
+  padding-inline: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 10%;
+  background-color: #333;
+  border-radius: 14px;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+.checkBox {
+  width: 10%;
+  height: 30%;
+  accent-color: rgb(96, 255, 96);
 }
