--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,6 @@
 
 .btn {
   transition: all 0.5s ease-in-out;
-  color: white;
-  background-color: black;
   font-size: 1rem;
   font-weight: 400;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -26,10 +24,13 @@
 }
 
 .submit {
-  width: 25%;
+  height: 10%;
+  width: 20%;
   padding-block: 3%;
+  color: white;
+  background-color: black;
   border: 2px solid #fff;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -39,6 +40,17 @@
   background-color: #999;
   border: 2px solid #000;
   color: #000;
+}
+
+.delete-btn {
+  background-color: transparent;
+  border: none;
+}
+
+.rename-btn {
+  color: yellow;
+  border: none;
+  background-color: transparent;
 }
 
 .todos-container {
@@ -65,12 +77,12 @@
 .new-todo-input {
   color: #999;
   background-color: #222;
-  width: 100%;
+  width: 75%;
   height: 100%;
-  padding-block: 10px;
-  padding-inline: 10px;
-  margin-left: 10px;
-  margin-top: 5px;
+  padding-block: 3%;
+  padding-inline: 3%;
+  margin-left: 2%;
+  margin-top: 2%;
   font-size: 1rem;
   font-weight: 700;
   font-family: sans-serif;
@@ -79,13 +91,7 @@
 }
 
 .new-todo-input::placeholder {
-  transition: all 0.5s ease-in-out;
   color: #ddd;
-  transform: translateX(-300px);
-}
-
-.new-todo-input:hover::placeholder {
-  transform: translateY(0px);
 }
 
 .label {
@@ -94,19 +100,14 @@
   font-size: 1.4rem;
 }
 
-.todo-container {
-  padding-inline: 2%;
+.todo-container-input-name {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 10%;
-  background-color: #333;
-  border-radius: 14px;
-  margin-bottom: 5px;
-  color: #fff;
+  justify-content: start;
+  width: 75%;
 }
 
-.checkBox {
+.todo-container-checkBox {
   width: 10%;
   height: 30%;
   accent-color: rgb(96, 255, 96);
